--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="read">메모 보기</string>
     <string name="write">메모 새로 작성</string>
     <string name="modify">메모 편집</string>
+    <string name="view">사진 보기</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
